--- a/index.html
+++ b/index.html
@@ -10,7 +10,72 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <div class="jumbotron">
+        <h1 class="display-3">Blackwell Family</h1>
+        
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-10">
+                <hr>
+                <h2>Arthur James<span>Blackwell</span></h2>
+            </div>
+            <div class="col-lg-10">
+                <h2>John Richard<span>Blackwell</span></h2>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-10">
+                <hr>
+                <h2>Thomas<span>Blackwell Jr</span></h2>
+            </div>
+            <div class="col-lg-10">
+                <h2>Robert<span>Blackwell</span></h2>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-10">
+                <hr>
+                <h2>Gerald<span>Blackwell</span></h2>
+            </div>
+            <div class="col-lg-10">
+                <h2>Patricia Anne<span>Blackwell</span></h2>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-10">
+                <hr>
+                <h2>Janet<span>Blackwell</span></h2>
+            </div>
+            <div class="col-lg-10">
+                <h2>Brenda<span>Blackwell</span></h2>
+            </div>
+            <div class="col-lg-10">
+                <h2>Kalvin<span>Blackwell</span></h2>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-10">
+                <hr>
+                <h2>Valerie<span>Blackwell</span></h2>
+            </div>
+            <div class="col-lg-10">
+                <h2>Gloria<span>Blackwell</span></h2>
+            </div>
+            <div class="col-lg-10">
+                <h2>Kenneth<span>Blackwell</span></h2>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
