--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Blackwell Family Tree</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="/scss/main.min.css">
 </head>
 
-<body>
+<body class="green-bg-style">
     <div class="jumbotron">
         <h1 class="display-3">Blackwell Family</h1>
         
@@ -18,21 +19,10 @@
         <div class="row">
             <div class="col-lg-10">
                 <hr>
-                <h2>Arthur James<span>Blackwell</span></h2>
+                <h2 class="names-green">Arthur James<span>Blackwell</span></h2>
             </div>
             <div class="col-lg-10">
-                <h2>John Richard<span>Blackwell</span></h2>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-10">
-                <hr>
-                <h2>Thomas<span>Blackwell Jr</span></h2>
-            </div>
-            <div class="col-lg-10">
-                <h2>Robert<span>Blackwell</span></h2>
+                <h2 class="names-green">John Richard<span>Blackwell</span></h2>
             </div>
         </div>
     </div>
@@ -40,10 +30,10 @@
         <div class="row">
             <div class="col-lg-10">
                 <hr>
-                <h2>Gerald<span>Blackwell</span></h2>
+                <h2 class="names-green">Thomas<span>Blackwell Jr</span></h2>
             </div>
             <div class="col-lg-10">
-                <h2>Patricia Anne<span>Blackwell</span></h2>
+                <h2 class="names-green">Robert<span>Blackwell</span></h2>
             </div>
         </div>
     </div>
@@ -51,13 +41,24 @@
         <div class="row">
             <div class="col-lg-10">
                 <hr>
-                <h2>Janet<span>Blackwell</span></h2>
+                <h2 class="names-green">Gerald<span>Blackwell</span></h2>
             </div>
             <div class="col-lg-10">
-                <h2>Brenda<span>Blackwell</span></h2>
+                <h2 class="names-green">Patricia Anne<span>Blackwell</span></h2>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-10">
+                <hr>
+                <h2 class="names-green">Janet<span>Blackwell</span></h2>
             </div>
             <div class="col-lg-10">
-                <h2>Kalvin<span>Blackwell</span></h2>
+                <h2 class="names-green">Brenda<span>Blackwell</span></h2>
+            </div>
+            <div class="col-lg-10">
+                <h2 class="names-green">Kalvin<span>Blackwell</span></h2>
             </div>
         </div>
     </div>
@@ -66,13 +67,13 @@
         <div class="row">
             <div class="col-lg-10">
                 <hr>
-                <h2>Valerie<span>Blackwell</span></h2>
+                <h2 class="names-green">Valerie<span>Blackwell</span></h2>
             </div>
             <div class="col-lg-10">
-                <h2>Gloria<span>Blackwell</span></h2>
+                <h2 class="names-green">Gloria<span>Blackwell</span></h2>
             </div>
             <div class="col-lg-10">
-                <h2>Kenneth<span>Blackwell</span></h2>
+                <h2 class="names-green">Kenneth<span>Blackwell</span></h2>
             </div>
         </div>
     </div>
