--- a/index.html
+++ b/index.html
@@ -7,61 +7,60 @@
     <title>Blackwell Family Tree</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="/scss/main.min.css">
 </head>
 
 <body class="green-bg-style">
-    <div class="jumbotron">
-        <h1 class="display-3">Blackwell Family</h1>
-        
-    </div>
+    
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-10">
-                <hr>
-                <h2 class="names-green">Arthur James<span>Blackwell</span></h2>
+                <hr class="text-light">
+                <h2 class="names-green">Arthur James<span class="special-name"> Blackwell</span></h2>
             </div>
             <div class="col-lg-10">
-                <h2 class="names-green">John Richard<span>Blackwell</span></h2>
+                <h2 class="names-green">John Richard<span class="special-name"> Blackwell</span></h2>
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-10">
-                <hr>
-                <h2 class="names-green">Thomas<span>Blackwell Jr</span></h2>
+                <hr class="text-light">
+                <h2 class="names-green">Thomas<span class="special-name"> Blackwell Jr</span></h2>
             </div>
             <div class="col-lg-10">
-                <h2 class="names-green">Robert<span>Blackwell</span></h2>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-10">
-                <hr>
-                <h2 class="names-green">Gerald<span>Blackwell</span></h2>
-            </div>
-            <div class="col-lg-10">
-                <h2 class="names-green">Patricia Anne<span>Blackwell</span></h2>
+                <h2 class="names-green">Robert<span class="special-name"> Blackwell</span></h2>
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-10">
-                <hr>
-                <h2 class="names-green">Janet<span>Blackwell</span></h2>
+                <hr class="text-light">
+                <h2 class="names-green">Gerald<span class="special-name"> Blackwell</span></h2>
             </div>
             <div class="col-lg-10">
-                <h2 class="names-green">Brenda<span>Blackwell</span></h2>
+                <h2 class="names-green">Patricia Anne<span class="special-name"> Blackwell</span></h2>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-10">
+                <hr class="text-light">
+                <h2 class="names-green">Janet<span class="special-name"> Blackwell</span></h2>
             </div>
             <div class="col-lg-10">
-                <h2 class="names-green">Kalvin<span>Blackwell</span></h2>
+                <h2 class="names-green">Brenda<span class="special-name"> Blackwell</span></h2>
+            </div>
+            <div class="col-lg-10">
+                <h2 class="names-green">Kalvin<span class="special-name"> Blackwell</span></h2>
             </div>
         </div>
     </div>
@@ -69,14 +68,14 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-10">
-                <hr>
-                <h2 class="names-green">Valerie<span>Blackwell</span></h2>
+                <hr class="text-light">
+                <h2 class="names-green">Valerie<span class="special-name"> Blackwell</span></h2>
             </div>
             <div class="col-lg-10">
-                <h2 class="names-green">Gloria<span>Blackwell</span></h2>
+                <h2 class="names-green">Gloria<span class="special-name"> Blackwell</span></h2>
             </div>
             <div class="col-lg-10">
-                <h2 class="names-green">Kenneth<span>Blackwell</span></h2>
+                <h2 class="names-green">Kenneth<span class="special-name"> Blackwell</span></h2>
             </div>
         </div>
     </div>
